force-app/main/default/objects/custom_create257__c/custom_create257__c.object-meta.xml
<CustomObject>
    <label>Custom created object257</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects257</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>