force-app/main/default/objects/custom_create257__c/fields/custom_create_257field599__c.field-meta.xml
<CustomField>
    <fullName>custom_create_257field599__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 257field599</label>
    <type>Checkbox</type>
</CustomField>