force-app/main/default/objects/custom_create257__c/fields/custom_create_257field674__c.field-meta.xml
<CustomField>
    <fullName>custom_create_257field674__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 257field674</label>
    <type>Checkbox</type>
</CustomField>